# pyzstd

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  __init__.py  build_cffi.py  index.rst  pyproject.toml  pyzstd.py  requirements-dev.txt  rtd_requirements.txt  setup.py  transform.py  update_ver.py  zstd.py
.github/workflows/: build.yml  main.yml
build_script/: pep517.py  pyzstd_build_cffi.py  pyzstd_pep517.py
build_tools/: test_zstd.py  transform.py  update_ver.py
docs/: .readthedocs.yaml  conf.py  deprecated.md  deprecated.rst  index.md  index.rst  pyzstd.rst  stdlib.md
src/: __init__.py  __init__.pyi  __main__.py  _seekable_zstdfile.py  _zstd.c  _zstdfile.py  _zstdmodule.c  args.h  pypi1.h  pypi2.h  pyzstd.py  seekable_zstdfile.py  zstdfile.py
src/_c/: __init__.py
src/_cffi/: common.py  decompressor.py  file.py  output_buffer.py
src/bin_ext/: _zstdmodule.c  build_cffi.py  build_pyzstd_cffi.py  compressor.c  decompressor.c  dict.c  file.c  file_reader.c  filereader.c  macro_functions.h  output_buffer.h  pyzstd.c  pyzstd.h  stream.c
src/c/: __init__.py  c_pyzstd.py
src/cffi/: __init__.py  cffi_pyzstd.py  common.py  compressor.py  decompressor.py  dict.py  file.py  output_buffer.py  stream.py
src/clinic/: _zstd.c.h  _zstdmodule.c.h
src/pyzstd/: __init__.py  __init__.pyi  __main__.py  _seekable_zstdfile.py
test/: test_zstd.py
tests/: test_seekable.py  test_zstd.py
